--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     container_name: myzapdev
     working_dir: /usr/src/app
     volumes:
-      - ${PATH_LOCAL}:/usr/src/app
+      - ./:/usr/src/app
     ports:
-      - 3333:${HOST_PORT}
+      - 3333:3333
     stdin_open: true # docker run -i
     tty: true        # docker run -t
     networks:
@@ -17,18 +17,18 @@ services:
         aliases:
           - myzapdev
 
-  myzapprod:
-    build: 
-      context: .
-      target: myzapprod
-    container_name: myzapprod
-#    image: gcr.io/maisagil/myzap
-    ports:
-      - 3333:${HOST_PORT}
-    networks:
-      backend:
-        aliases:
-          - myzapprod
+#   myzapprod:
+#     build: 
+#       context: .
+#       target: myzapprod
+#     container_name: myzapprod
+# #    image: gcr.io/maisagil/myzap
+#     ports:
+#       - 3333:${HOST_PORT}
+#     networks:
+#       backend:
+#         aliases:
+#           - myzapprod
 networks:
   backend:
     name: myzapnetwork
