adjusting env & docker-compose file

--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,6 @@
-PATH_LOCAL=D:\laragon\www\myzap
+VERSION:1.0.0
 HOST_PORT=3333
-ENGINE=VENOM
-# ENGINE=WPPCONNECT
+ENGINE=WPPCONNECT
 JSONBINIO_BIN_ID=
 JSONBINIO_SECRET_KEY=
 # HTTPS=0
