--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,32 +3,10 @@ services:
   myzapdev:
     build: 
       context: .
-      target: myzapdev
+    image: myzap:${VERSION}
     container_name: myzapdev
     working_dir: /usr/src/app
     volumes:
       - ./:/usr/src/app
     ports:
       - 3333:3333
-    stdin_open: true # docker run -i
-    tty: true        # docker run -t
-    networks:
-      backend:
-        aliases:
-          - myzapdev
-
-#   myzapprod:
-#     build: 
-#       context: .
-#       target: myzapprod
-#     container_name: myzapprod
-# #    image: gcr.io/maisagil/myzap
-#     ports:
-#       - 3333:${HOST_PORT}
-#     networks:
-#       backend:
-#         aliases:
-#           - myzapprod
-networks:
-  backend:
-    name: myzapnetwork
