--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.5"
+
 services:
   myzapdev:
     build: 
@@ -6,7 +7,8 @@ services:
     image: myzap:${VERSION}
     container_name: myzapdev
     working_dir: /usr/src/app
+    command: node index.js
     volumes:
       - ./:/usr/src/app
     ports:
-      - 3333:3333
+      - ${HOST_PORT}:3333
